@@ -1,5 +1,5 @@
 # "src/Make.hchk-tail.am"
-#	$Id: Make.hchk-tail.am,v 1.13 2007/01/24 23:20:23 fang Exp $
+#	$Id: Make.hchk-tail.am,v 1.14 2007/03/08 23:07:26 fang Exp $
 #	vi: ft=automake
 # Makefile footer for enforcing header checks.  
 # Counterpart is "src/Make.hchk-head.am"
@@ -47,11 +47,13 @@ FAKE_DEP_FILTER = $(GREP) "^#" | $(GREP) -v '\"/' | $(GREP) -v '\"<' | \
 
 # cray-zee anal-retentive header checking with depdendence-tracking
 # make the script accessible to those who want to override
+# predefine more_hchk_flags before invoking the test script to 
+# add CPPFLAGS for the header check test
 H_CHECK_TEST_SCRIPT =
 if am__fastdepCXX
 H_CHECK_TEST_SCRIPT += \
 	depbase=`$(ECHO) $@ | $(SED) 's|[^/]*$$|$(DEPDIR)/&|;s|\.hchk$$||'`; \
-	if $(CXXCOMPILE) -I$(srcdir) -include $< \
+	if $(CXXCOMPILE) -I$(srcdir) $$more_hchk_flags -include $< \
 		$(FAST_MAKEDEP_FLAGS) "$$depbase.Thd" \
 		-c $(EMPTY_SOURCE) -o $@; \
 	then $(CAT) "$$depbase.Thd" | $(FILTER_HEADER_DEPS) | \
@@ -60,7 +62,7 @@ H_CHECK_TEST_SCRIPT += \
 	else $(RM) "$$depbase.Thd"; exit 1; fi
 else
 H_CHECK_TEST_SCRIPT += \
-	$(CXXCOMPILE) -I$(srcdir) -include $< -c $(EMPTY_SOURCE) -o $@
+	$(CXXCOMPILE) -I$(srcdir) $$more_hchk_flags -include $< -c $(EMPTY_SOURCE) -o $@
 endif
 
 .h.hchk:
@@ -71,7 +73,7 @@ HH_CHECK_TEST_SCRIPT =
 if am__fastdepCXX
 HH_CHECK_TEST_SCRIPT += \
 	depbase=`$(ECHO) $@ | $(SED) 's|[^/]*$$|$(DEPDIR)/&|;s|\.hhchk$$||'`; \
-	if $(CXXCOMPILE) -I$(srcdir) -include $< \
+	if $(CXXCOMPILE) -I$(srcdir) $$more_hchk_flags -include $< \
 		$(FAST_MAKEDEP_FLAGS) "$$depbase.Thhd" \
 		-c $(EMPTY_SOURCE) -o $@; \
 	then $(CAT) "$$depbase.Thhd" | $(FILTER_HEADER_DEPS) | \
@@ -80,7 +82,7 @@ HH_CHECK_TEST_SCRIPT += \
 	else $(RM) "$$depbase.Thhd"; exit 1; fi
 else
 HH_CHECK_TEST_SCRIPT += \
-	$(CXXCOMPILE) -I$(srcdir) -include $< -c $(EMPTY_SOURCE) -o $@
+	$(CXXCOMPILE) -I$(srcdir) $$more_hchk_flags -include $< -c $(EMPTY_SOURCE) -o $@
 endif
 .hh.hhchk:
 	@$(ECHO) "Validating $< ... " ; \
@@ -90,7 +92,7 @@ TCC_CHECK_TEST_SCRIPT =
 if am__fastdepCXX
 TCC_CHECK_TEST_SCRIPT += \
 	depbase=`$(ECHO) $@ | $(SED) 's|[^/]*$$|$(DEPDIR)/&|;s|\.tccchk$$||'`; \
-	if $(CXXCOMPILE) -I$(srcdir) -include $< \
+	if $(CXXCOMPILE) -I$(srcdir) $$more_hchk_flags -include $< \
 		$(FAST_MAKEDEP_FLAGS) "$$depbase.Ttccd" \
 		-c $(EMPTY_SOURCE) -o $@; \
 	then $(CAT) "$$depbase.Ttccd" | $(FILTER_HEADER_DEPS) | \
@@ -99,7 +101,7 @@ TCC_CHECK_TEST_SCRIPT += \
 	else $(RM) "$$depbase.Ttccd"; exit 1; fi
 else
 TCC_CHECK_TEST_SCRIPT += \
-	$(CXXCOMPILE) -I$(srcdir) -include $< -c $(EMPTY_SOURCE) -o $@
+	$(CXXCOMPILE) -I$(srcdir) $$more_hchk_flags -include $< -c $(EMPTY_SOURCE) -o $@
 endif
 .tcc.tccchk:
 	@$(ECHO) "Validating $< ... " ; \
