@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-03-08	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81:
+	  Dawn of a new epoch.  
+	  Reworked guile-logo demo and examples to NOT use swig anymore, 
+		thereby removing another bootstrap program dependency.  
+	  From now on, we will write and maintain guile-scm wrappers by hand.  
+
+
 2007-03-02	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-92:
