@@ -1,5 +1,12 @@
 "ChangeLog"
 
+2007-03-08	David Fang	<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81:
+	  Dropping swig as a bootstrap requirement, maintaining
+		guile-scm wrappers by hand.  
+
+
 2007-03-02	David Fang	<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-92:
